Revert "Fixed SUMA support matrix for AlmaLinux and Rocky Linux."
This reverts commit ee234fa019aaf58cb28dfe04c6099decfec1d387.

--- a/modules/installation-and-upgrade/pages/client-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/client-requirements.adoc
@@ -63,10 +63,6 @@ ifeval::[{suma-content} == true]
 | {x86_64}, {aarch64}
 | {check}
 
-| {almalinux} 9
-| {x86_64}, {aarch64}
-| {check}
-
 | {amazon} 2
 | {x86_64}, {aarch64}
 | {check}
@@ -108,10 +104,6 @@ ifeval::[{suma-content} == true]
 | {check}
 
 | {rocky} 8
-| {x86_64}, {aarch64}
-| {check}
-
-| {rocky} 9
 | {x86_64}, {aarch64}
 | {check}
 
@@ -189,7 +181,7 @@ ifeval::[{uyuni-content} == true]
 | {check}
 
 | {almalinux} 9
-| {x86_64}, {aarch64}
+| {x86_64}, {ppc64le}, {ibmz}, {aarch64}
 | {check}
 
 | {amazon} 2
