--- a/modules/reference/pages/systems/system-details/sd-software-channels.adoc
+++ b/modules/reference/pages/systems/system-details/sd-software-channels.adoc
@@ -32,7 +32,8 @@ java.cloned_channel_auto_selection = false
 
 In general, channel pre-selection is necessary to avoid problems with missing dependencies for a given channel but it only works flawlessly for vendor channels.
 For cloned channels, {productname} relies on the channel label to define dependencies and use it in auto selection.
-This heuristic sometimes causes a side-effect of having unnecessary channels being automatically selected as dependencies.
+This heuristic sometimes lead to either selecting unnecessary child channels or overlooking some essential ones.
+Users should exercise caution and pay attention in such case that correct channels are selected.
 In such a case, it can be necessary to disable auto selection using the above mentioned setting.
 
 For Salt clients, apply the highstate after changing software channels.
