Fixed SUMA and Uyuni support matrix for AlmaLinux and Rocky Linux, 8 and 9.

--- a/modules/installation-and-upgrade/pages/client-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/client-requirements.adoc
@@ -59,6 +59,10 @@ ifeval::[{suma-content} == true]
 | {x86_64}
 | {check}
 
+| {almalinux} 9
+| {x86_64}, {aarch64}
+| {check}
+
 | {almalinux} 8
 | {x86_64}, {aarch64}
 | {check}
@@ -101,6 +105,10 @@ ifeval::[{suma-content} == true]
 
 | {rhel} 8
 | {x86_64}
+| {check}
+
+| {rocky} 9
+| {x86_64}, {aarch64}
 | {check}
 
 | {rocky} 8
@@ -176,12 +184,12 @@ ifeval::[{uyuni-content} == true]
 | {x86_64}, {aarch64}
 | {check}
 
-| {almalinux} 8
-| {x86_64}, {aarch64}
+| {almalinux} 9
+| {x86_64}, {aarch64} {ppc64le}, {ibmz}, {s390x}
 | {check}
 
-| {almalinux} 9
-| {x86_64}, {ppc64le}, {ibmz}, {aarch64}
+| {almalinux} 8
+| {x86_64}, {aarch64}
 | {check}
 
 | {amazon} 2
@@ -224,12 +232,12 @@ ifeval::[{uyuni-content} == true]
 | {x86_64}
 | {check}
 
-| {rocky} 8
-| {x86_64}, {aarch64}
-| {check}
-
 | {rocky} 9
 | {x86_64}, {aarch64}, {ppc64le}, {s390x}
+| {check}
+
+| {rocky} 8
+| {x86_64}, {aarch64}
 | {check}
 
 | {ubuntu} 18.04
