update document positions

--- a/modules/installation-and-upgrade/pages/install-intro.adoc
+++ b/modules/installation-and-upgrade/pages/install-intro.adoc
@@ -4,4 +4,4 @@
 This section describes the process to install {productname} components.
 
 It is possible to use a public cloud instance to install {productname}.
-For more information on using {productname} on a public cloud, see xref:specialized-guides:qs-publiccloud/overview.adoc[].
+For more information on using {productname} on a public cloud, see xref:specialized-guides:public-cloud-guide/overview.adoc[].
