--- a/modules/specialized-guides/nav-specialized-guides-guide.adoc
+++ b/modules/specialized-guides/nav-specialized-guides-guide.adoc
@@ -8,27 +8,31 @@ endif::[]
 
 
 * xref:specialized-guides-overview.adoc[Specialized Guides]
-** {payg} Guide
-*** xref:payg/payg-overview.adoc[{payglongform} Overview]
-*** xref:payg/payg-benefits.adoc[Benefits of {payg}]
-*** {payg} on AWS
-**** xref:payg/payg-faq.adoc[{payg} FAQ on AWS]
-**** xref:payg/payg-country-listing.adoc[Supported Country List]
-**** xref:payg/payg-aws-requirements.adoc[SUSE Manager AWS requirements]
-**** xref:payg/payg-find-the-aws-image.adoc[Find the Image]
-**** xref:payg/payg-configure-the-image.adoc[Configure the Image on EC2]
-**** xref:payg/payg-start-the-image.adoc[Start the Instance]
-**** xref:payg/payg-initial-setup.adoc[Initial Setup]
-**** xref:payg/payg-start-the-server.adoc[Start the Server]
-**** xref:payg/payg-webui-configuration.adoc[WebUI Configuration]
-//*** xref:payg/payg-and-azure.adoc[PAYG and Azure]
-//**** xref:payg/payg-getting-started-with-azure.adoc[Getting started with Azure]
-//**** xref:payg/payg-azure-requirements[Azure requirements] 
-//**** xref:payg/creating-an-azure-account.adoc[Creating an Azure account]
-//*** xref:payg/payg-and-gcp.adoc[PAYG and Google Cloud Compute]
-//**** xref:payg/payg-getting-started-with-gcp.adoc[Getting started with GCP]
-//**** xref:payg/payg-gcp-requirements[GCP requirements] 
-//**** xref:payg/creating-an-gcp-account.adoc[Creating an GCP account]
+** xref:public-cloud-guide/overview.adoc[Public Cloud Guide]
+*** Generic Public Cloud 
+**** xref:public-cloud-guide/setup.adoc[Initial Setup]
+**** xref:public-cloud-guide/clients.adoc[Client Configuration]
+*** {payg} Guide
+**** xref:public-cloud-guide/payg/payg-overview.adoc[{payglongform} Overview]
+**** xref:public-cloud-guide/payg/payg-benefits.adoc[Benefits of {payg}]
+**** {payg} on AWS
+***** xref:public-cloud-guide/payg/payg-faq.adoc[{payg} FAQ on AWS]
+***** xref:public-cloud-guide/payg/payg-country-listing.adoc[Supported Country List]
+***** xref:public-cloud-guide/payg/payg-aws-requirements.adoc[SUSE Manager AWS requirements]
+***** xref:public-cloud-guide/payg/payg-find-the-aws-image.adoc[Find the Image]
+***** xref:public-cloud-guide/payg/payg-configure-the-image.adoc[Configure the Image on EC2]
+***** xref:public-cloud-guide/payg/payg-start-the-image.adoc[Start the Instance]
+***** xref:public-cloud-guide/payg/payg-initial-setup.adoc[Initial Setup]
+***** xref:public-cloud-guide/payg/payg-start-the-server.adoc[Start the Server]
+***** xref:public-cloud-guide/payg/payg-webui-configuration.adoc[WebUI Configuration]
+//*** xref:public-cloud-guide/payg/payg-and-azure.adoc[PAYG and Azure]
+//**** xref:public-cloud-guide/payg/payg-getting-started-with-azure.adoc[Getting started with Azure]
+//**** xref:public-cloud-guide/payg/payg-azure-requirements[Azure requirements] 
+//**** xref:public-cloud-guide/payg/creating-an-azure-account.adoc[Creating an Azure account]
+//*** xref:public-cloud-guide/payg/payg-and-gcp.adoc[PAYG and Google Cloud Compute]
+//**** xref:public-cloud-guide/payg/payg-getting-started-with-gcp.adoc[Getting started with GCP]
+//**** xref:public-cloud-guide/payg/payg-gcp-requirements[GCP requirements] 
+//**** xref:public-cloud-guide/payg/creating-an-gcp-account.adoc[Creating an GCP account]
 ** xref:salt/salt-overview.adoc[Salt Guide]
 *** xref:salt/salt-terminology.adoc[Terminology]
 *** xref:salt/salt-command.adoc[Salt Command]
@@ -69,10 +73,7 @@ endif::[]
 **** xref:large-deployments/hub-reporting.adoc[Hub Reporting]
 *** xref:large-deployments/retail-large-scale.adoc[Large Retail Environments]
 *** xref:large-deployments/tuning.adoc[Tuning Large Installations]
-*** xref:large-deployments/monitoring.adoc[Monitoring Large Scale Deployments]
-** xref:qs-publiccloud/overview.adoc[Quick Start: Public Cloud]
-*** xref:qs-publiccloud/setup.adoc[Setting Up]
-*** xref:qs-publiccloud/clients.adoc[Clients]
+*** xref:large-deployments/monitoring.adoc[Monitoring Large Scale Deployments
 ** xref:qs-sap/overview.adoc[Quick Start: SAP]
 *** xref:qs-sap/prepare-server.adoc[Prepare Server]
 *** xref:qs-sap/prepare-clients.adoc[Prepare Clients]
