--- a/modules/specialized-guides/pages/specialized-guides-overview.adoc
+++ b/modules/specialized-guides/pages/specialized-guides-overview.adoc
@@ -9,9 +9,7 @@ It is designed to introduce basic, routine or some advanced tasks, by explaining
 
 You can read specialized guides for:
 
-
+* xref:public-cloud-guide/overview.adoc[Public Cloud Guide]
 * xref:salt/salt-overview.adoc[Salt Guide]
 * xref:large-deployments/overview.adoc[Large Deployments Guide]
-* xref:qs-publiccloud/overview.adoc[Quick Start: Public Cloud]
-* xref:payg/payg-overview.adoc[Pay-as-you-go Cloud Services]
 * xref:qs-sap/overview.adoc[Quick Start: SAP]
