--- a/modules/specialized-guides/pages/public-cloud-guide/setup.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/setup.adoc
@@ -1,5 +1,5 @@
 [[quickstart-publiccloud-setup]]
-= Setting up
+= Initial Setup
 
 This guide shows you the fastest way to get {productname} up and running in a public cloud using on-demand or BYOS services.
 We have tested using {productname} on Amazon EC2, Google Compute Engine, and Microsoft Azure, but these procedures should work with other public cloud providers as well, with some variation.
