fix ifeval white space issue
unify title style capitalization

--- a/modules/installation-and-upgrade/pages/proxy-container-installation.adoc
+++ b/modules/installation-and-upgrade/pages/proxy-container-installation.adoc
@@ -1,8 +1,9 @@
 [[installation-proxy-containers]]
-= Install Containerized {productname} Proxy
+= Install containerized {productname} Proxy
 
 [NOTE]
 ====
+
 ifeval::[{uyuni-content} == true]
 Only {opensuse} Leap 15.3 and newer are supported to be used as container host for {productname} Proxy containers.
 endif::[]
@@ -10,6 +11,7 @@ endif::[]
 ifeval::[{suma-content} == true]
 Only {sles} 15 SP3 and newer are supported to be used as container host for {productname} Proxy containers.
 endif::[]
+
 ====
 
 The container host must be connected to {productname} as a {salt} client.
@@ -18,9 +20,9 @@ Connecting container host as a traditional client will not work because required
 
 
 [[installation-proxy-containers-requirements]]
-== Container Host Requirements
+== Container host requirements
 
-.Proxy Container Host Hardware Requirements
+.Proxy Container host hardware requirements
 [cols="3*", options="header"]
 |===
 | Hardware
@@ -44,7 +46,7 @@ Connecting container host as a traditional client will not work because required
 | Minimum 100{nbsp}GB
 |===
 
-.Proxy Container Host Software Requirements
+.Proxy Container host software requirements
 [cols="3*", options="header"]
 |===
 | Software
@@ -66,7 +68,7 @@ To ensure that domain name of the {productname} Server can be resolved by the cl
 
 
 [[installation-proxy-containers-services]]
-== Install Container Services on the host system
+== Install container services on the host system
 
 [NOTE]
 ====
@@ -86,7 +88,7 @@ First step is to install container control files provided by package [literal]``
 
 
 [[proc-installation-proxy-containers-services]]
-.Procedure: Installation of Container Services for {productname} Proxy
+.Procedure: Installation of container services for {productname} Proxy
 
 . Assign [literal]``Containers Module`` software channel to the container host in the {productname}.
 For more information about assigning software channels to the system, see xref:administration:channel-management.adoc[].
