--- a/modules/installation-and-upgrade/pages/client-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/client-requirements.adoc
@@ -189,7 +189,7 @@ ifeval::[{uyuni-content} == true]
 | {check}
 
 | {almalinux} 9
-| {x86_64}, {aarch64} {ppc64le}, {ibmz}, {s390x}
+| {x86_64}, {aarch64} {ppc64le}, {s390x}
 | {check}
 
 | {amazon} 2
