--- a/modules/client-configuration/pages/supported-features.adoc
+++ b/modules/client-configuration/pages/supported-features.adoc
@@ -210,7 +210,7 @@ ifeval::[{uyuni-content} == true]
 | {check}
 
 | {almalinux} 9
-| {x86_64}, {ppc64le}, {ibmz}, {aarch64}
+| {x86_64}, {aarch64}, {ppc64le}, {s390x}
 | {check}
 
 | {amazon} 2
