Correct architectures for AlmaLinux and RockyLinux, 8 and 9.

--- a/modules/client-configuration/pages/supported-features.adoc
+++ b/modules/client-configuration/pages/supported-features.adoc
@@ -95,7 +95,7 @@ ifeval::[{suma-content} == true]
 | {check}
 
 | {almalinux} 9
-| {x86_64}, {ppc64le}, {ibmz}, {aarch64}
+| {x86_64}, {aarch64}
 | {cross}
 | {check}
 
@@ -155,7 +155,7 @@ ifeval::[{suma-content} == true]
 | {check}
 
 | {rocky} 9
-| {x86_64}, {aarch64}, {ppc64le}, {s390x}
+| {x86_64}, {aarch64}
 | {cross}
 | {check}
 
@@ -245,7 +245,7 @@ ifeval::[{uyuni-content} == true]
 | {check}
 
 | {almalinux} 9
-| {x86_64}, {ppc64le}, {ibmz}, {aarch64}
+| {x86_64}, {aarch64}, {ppc64le}, {s390x}
 | {cross}
 | {check}
 
