--- a/modules/installation-and-upgrade/pages/client-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/client-requirements.adoc
@@ -72,6 +72,11 @@ ifeval::[{suma-content} == true]
 | {check}
 | {check}
 
+| {almalinux} 9
+| {x86_64}, {aarch64}
+| {cross}
+| {check}
+
 | {almalinux} 8
 | {x86_64}, {aarch64}
 | {cross}
@@ -125,6 +130,11 @@ ifeval::[{suma-content} == true]
 | {rhel} 7
 | {x86_64}
 | {check}
+| {check}
+
+| {rocky} 9
+| {x86_64}, {aarch64}
+| {cross}
 | {check}
 
 | {rocky} 8
@@ -204,6 +214,11 @@ ifeval::[{uyuni-content} == true]
 
 | {alibabaclo} 2
 | {x86_64}, {aarch64}
+| {cross}
+| {check}
+
+| {almalinux} 9
+| {x86_64}, {aarch64}, {ppc64le}, {s390x}
 | {cross}
 | {check}
 
