--- a/modules/client-configuration/pages/clients-rh-rhui.adoc
+++ b/modules/client-configuration/pages/clients-rh-rhui.adoc
@@ -58,7 +58,7 @@ Clients using Satellite certificates are not supported with {productname} Server
 
 [IMPORTANT]
 ====
-The PAYG connection regular check with the client to get the latest authentication data. It is important that the client stay running and is regular updated.
+The PAYG connection regularly checks with the client to get the latest authentication data. It is important that the client stays running and is regular updated.
 If this does not happen, repository synchronization will fail with authentication errors at some point in time.
 ====
 
