revert previous commit, but comment db- files on uyuni https://github.com/SUSE/spacewalk/issues/22530

--- a/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
+++ b/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
@@ -117,9 +117,11 @@ ifeval::[{suma-content} == true]
 **** xref:proxy-y-z.adoc[Proxy - Minor Version or Patch Level Upgrade]
 endif::[]
 
+ifeval::[{suma-content} == true]
 *** xref:db-intro.adoc[Upgrade the Database]
 **** xref:db-migration-xy.adoc[Database Migration to Latest Version]
 *** xref:client-intro.adoc[Upgrade the Clients]
+endif::[]
 
 
 ifdef::backend-pdf[]
