comment references to db- files on uyuni

--- a/modules/installation-and-upgrade/pages/server-major-upgrade-uyuni.adoc
+++ b/modules/installation-and-upgrade/pages/server-major-upgrade-uyuni.adoc
@@ -42,6 +42,9 @@ zypper ref
 zypper up susemanager
 ----
 . Run the [command]``/usr/lib/susemanager/bin/server-migrator.sh`` script to upgrade the base OS and {productname} Server.
+
+////
+//   At the moment 2023.09, not needed
 . To migrate the database to the latest database version run the migrate script:
 +
 ----
@@ -49,6 +52,7 @@ zypper up susemanager
 ----
 +
 For more information about PostgreSQL database migration, see xref:db-migration-xy.adoc[].
+////
 
 [IMPORTANT]
 ====
