--- a/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
+++ b/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
@@ -122,6 +122,10 @@ ifeval::[{suma-content} == true]
 **** xref:db-migration-xy.adoc[Database Migration to Latest Version]
 endif::[]
 
+ifeval::[{uyuni-content} == true]
+*** xref:db-migration-xy.adoc[Database Migration to Latest Version]
+endif::[]
+
 *** xref:client-intro.adoc[Upgrade the Clients]
 
 ifdef::backend-pdf[]
