--- a/modules/client-configuration/pages/repositories.adoc
+++ b/modules/client-configuration/pages/repositories.adoc
@@ -51,16 +51,27 @@ After a client has completed onboarding, you can add local repositories to these
 .Local Repository Locations
 |===
 
+ifeval::[{suma-content} == true]
 | Client Operating System | Local Repository Directory
 | {sles} | [path]``/etc/zypp/repos.d``
 | {opensuse} | [path]``/etc/zypp/repos.d``
-// SUSE Liberty Linux not available at Uyuni for now
-ifeval::[{suma-content} == true]
 | {sles} {es} | [path]``/etc/yum.repos.d/``
-endif::[]
 | {rhel} and similar derivatives | [path]``/etc/yum.repos.d/``
 | {ubuntu} | [path]``/etc/apt/sources.list.d/``
 | {debian} | [path]``/etc/apt/sources.list.d/``
+endif::[]
 
 |===
 
+// SUSE Liberty Linux not available at Uyuni for now
+
+ifeval::[{uyuni-content} == true]
+| Client Operating System | Local Repository Directory
+| {sles} | [path]``/etc/zypp/repos.d``
+| {opensuse} | [path]``/etc/zypp/repos.d``
+| {rhel} and similar derivatives | [path]``/etc/yum.repos.d/``
+| {ubuntu} | [path]``/etc/apt/sources.list.d/``
+| {debian} | [path]``/etc/apt/sources.list.d/``
+endif::[]
+
+|===
