Cloned channels no auto #1211047 keichwa (#2435)
* disabling automatic channel selection for cloned channels
https://bugzilla.suse.com/show_bug.cgi?id=1211047
https://github.com/SUSE/spacewalk/issues/22461
* Update modules/reference/pages/systems/system-details/sd-software-channels.adoc
Co-authored-by: Abid Mehmood <amehmood@suse.de>
* remove duplicated sentence (per feedback)
Co-authored-by: Abid Mehmood <amehmood@suse.de>

--- a/modules/reference/pages/systems/system-details/sd-software-channels.adoc
+++ b/modules/reference/pages/systems/system-details/sd-software-channels.adoc
@@ -2,7 +2,6 @@
 = Software Channels
 
 The menu:Systems[Software > Software Channels] section allows you to manage the software channels on the current client.
-
 For more information about software channels, see xref:client-configuration:channels.adoc[].
 
 The menu:Systems[Software > Software Channels] subtab is split into sections:
@@ -19,6 +18,22 @@ Change the base channel subscription by selecting the new base channel, and clic
 The child channels associated with the base channel are populated in the [guimenu]``Child Channels`` section.
 Mandatory child channels are pre-selected.
 Toggle the [guimienu]``include recommended`` switch to also select recommended child channels.
+
+
+
+[NOTE]
+====
+By default, cloned vendor channels match the original vendor channel and automatically select the dependencies.
+You can disable the automatic selection for cloned channels by adding the following option in [path]``/etc/rhn/rhn.conf``:
+----
+java.cloned_channel_auto_selection = false
+----
+====
+
+In general, channel pre-selection is necessary to avoid problems with missing dependencies for a given channel but it only works flawlessly for vendor channels.
+For cloned channels, {productname} relies on the channel label to define dependencies and use it in auto selection.
+This heuristic sometimes lead to either selecting unnecessary child channels or overlooking some essential ones.
+Users should exercise caution and pay attention in such case that correct channels are selected.
 
 For Salt clients, apply the highstate after changing software channels.
 
