Fixed AlmaLinux and RockyLinux architectures.

--- a/modules/installation-and-upgrade/pages/client-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/client-requirements.adoc
@@ -77,6 +77,11 @@ ifeval::[{suma-content} == true]
 | {cross}
 | {check}
 
+| {almalinux} 9
+| {x86_64}, {aarch64}
+| {cross}
+| {check}
+
 | {amazon} 2
 | {x86_64}, {aarch64}
 | {cross}
@@ -128,6 +133,11 @@ ifeval::[{suma-content} == true]
 | {check}
 
 | {rocky} 8
+| {x86_64}, {aarch64}
+| {cross}
+| {check}
+
+| {rocky} 9
 | {x86_64}, {aarch64}
 | {cross}
 | {check}
