--- a/modules/installation-and-upgrade/pages/hardware-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/hardware-requirements.adoc
@@ -59,6 +59,10 @@ You can estimate how much space the [path]``/var/spacewalk/`` directory requires
 | Minimum 100{nbsp}GB per {suse} product and 360{nbsp}GB per Red Hat product
 
 |
+|
+| Additional 50{nbsp}GB when using Package Hub repositories (optional)
+
+|
 | [path]``/var/cache``
 | Minimum 10{nbsp}GB.
 Add 100{nbsp}MB per {suse} product, 1{nbsp}GB per Red Hat or other product.
@@ -102,7 +106,12 @@ ifeval::[{suma-content} == true]
 
 |
 | [path]``/var/spacewalk``
-| Minimum 50{nbsp}GB per SUSE product and 360{nbsp}GB per Red Hat product
+| Minimum 100{nbsp}GB per SUSE product and 360{nbsp}GB per Red Hat product
+
+
+|
+|
+| Additional 50{nbsp}GB when using Package Hub repositories (optional)
 
 |
 | [path]``/var/cache``
