--- a/modules/installation-and-upgrade/pages/uyuni-install-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/uyuni-install-requirements.adoc
@@ -44,6 +44,10 @@ The following tables specify the minimum server and proxy requirements.
 | Minimum 100{nbsp}GB per {suse} product and 360{nbsp}GB per Red Hat product
 
 |
+|
+| Additional 50{nbsp}GB when using Package Hub repositories (optional)
+
+|
 | [path]``/var/cache``
 | Minimum 10{nbsp}GB.
 Add 100{nbsp}MB per {suse} product, 1{nbsp}GB per Red Hat or other product.
