backport43 - Corrected SUMA 4.3 support matrix for AlmaLinux and Rocky Linux, 8 and 9 (#2459)
* Fixed AlmaLinux and RockyLinux architectures.

* Cont.

--- a/modules/installation-and-upgrade/pages/client-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/client-requirements.adoc
@@ -77,6 +77,11 @@ ifeval::[{suma-content} == true]
 | {cross}
 | {check}
 
+| {almalinux} 9
+| {x86_64}, {aarch64}
+| {cross}
+| {check}
+
 | {amazon} 2
 | {x86_64}, {aarch64}
 | {cross}
@@ -125,6 +130,11 @@ ifeval::[{suma-content} == true]
 | {rhel} 7
 | {x86_64}
 | {check}
+| {check}
+
+| {rocky} 9
+| {x86_64}, {aarch64}
+| {cross}
 | {check}
 
 | {rocky} 8
