clarification according to feedback

--- a/modules/installation-and-upgrade/pages/hardware-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/hardware-requirements.adoc
@@ -56,11 +56,9 @@ You can estimate how much space the [path]``/var/spacewalk/`` directory requires
 
 |
 | [path]``/var/spacewalk``
-| Minimum 100{nbsp}GB per {suse} product and 360{nbsp}GB per Red Hat product
-
-|
-|
-| Additional 50{nbsp}GB when using Package Hub repositories (optional)
+| Minimum 100{nbsp}GB (the implemented check ensure it)
+* per {suse} product and Package Hub 50{nbsp}GB required
+* per Red Hat product 360{nbsp}GB required
 
 |
 | [path]``/var/cache``
