Fixed the support matrix in the Install/Upgrade Guide and Client Configuration Guide.

--- a/modules/client-configuration/pages/supported-features.adoc
+++ b/modules/client-configuration/pages/supported-features.adoc
@@ -96,6 +96,11 @@ ifeval::[{suma-content} == true]
 | {x86_64}, {aarch64}
 | {check}
 
+
+| {centos} 8
+| {x86_64}, {aarch64}
+| {check}
+
 | {debian} 10
 | {x86_64}
 | {check}
