--- a/modules/installation-and-upgrade/pages/client-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/client-requirements.adoc
@@ -51,6 +51,10 @@ ifeval::[{suma-content} == true]
 | {x86_64}, {aarch64}
 | {check}
 
+| {sll} 9
+| {x86_64}
+| {check}
+
 | {sles} ES 7
 | {x86_64}
 | {check}
