--- a/modules/installation-and-upgrade/pages/hardware-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/hardware-requirements.adoc
@@ -57,8 +57,9 @@ You can estimate how much space the [path]``/var/spacewalk/`` directory requires
 |
 | [path]``/var/spacewalk``
 | Minimum 100{nbsp}GB (the implemented check ensure it)
-* per {suse} product and Package Hub 50{nbsp}GB required
-* per Red Hat product 360{nbsp}GB required
+
+* 50{nbsp}GB per {suse} product and Package Hub
+* 360{nbsp}GB per Red Hat product
 
 |
 | [path]``/var/cache``
