clarification according to feedback

--- a/modules/installation-and-upgrade/pages/hardware-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/hardware-requirements.adoc
@@ -106,12 +106,11 @@ ifeval::[{suma-content} == true]
 
 |
 | [path]``/var/spacewalk``
-| Minimum 100{nbsp}GB per SUSE product and 360{nbsp}GB per Red Hat product
+| Minimum 100{nbsp}GB (the implemented check ensure it)
 
+* 50{nbsp}GB per {suse} product and Package Hub
 
-|
-|
-| Additional 50{nbsp}GB when using Package Hub repositories (optional)
+* 360{nbsp}GB per Red Hat product
 
 |
 | [path]``/var/cache``
