--- a/modules/installation-and-upgrade/pages/uyuni-install-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/uyuni-install-requirements.adoc
@@ -41,11 +41,11 @@ The following tables specify the minimum server and proxy requirements.
 
 |
 | [path]``/var/spacewalk``
-| Minimum 100{nbsp}GB per {suse} product and 360{nbsp}GB per Red Hat product
+| Minimum 100{nbsp}GB (the implemented check ensure it)
 
-|
-|
-| Additional 50{nbsp}GB when using Package Hub repositories (optional)
+* 50{nbsp}GB per {suse} product and Package Hub
+
+* 360{nbsp}GB per Red Hat product
 
 |
 | [path]``/var/cache``
