--- a/modules/client-configuration/pages/supported-features.adoc
+++ b/modules/client-configuration/pages/supported-features.adoc
@@ -33,6 +33,10 @@ The operating system running on a client is supported by the organization that s
 // include::../../snippets/pages/supported-client-systems-snippet.adoc[]
 
 // Revert PR 1600 
+
+// 2023-09-20 OM: Make sure this table and the one in file
+// modules/installation-and-upgrade/pages/client-requirements.adoc are identical
+
 [[supported-client-systems-snippet]]
 
 ifeval::[{suma-content} == true]
@@ -151,6 +155,9 @@ ifeval::[{suma-content} == true]
 |===
 endif::[]
 
+
+// 2023-09-20 OM: Make sure this table and the one in file
+// modules/installation-and-upgrade/pages/client-requirements.adoc are identical
 
 ifeval::[{uyuni-content} == true]
 [[uyuni.supported.clients]]
