hwreq for /var/spacewalk (#2448
	disk space for /var/spacewalk in IaU Guide
4ttps://github.com/uyuni-project/uyuni-docs/issues/2446
https://github.com/SUSE/spacewalk/issues/22514
Co-authored-by: Ornela Marić <omaric@suse.com>
* Update hardware-requirements.adoc
* Update uyuni-install-requirements.adoc

--- a/modules/installation-and-upgrade/pages/hardware-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/hardware-requirements.adoc
@@ -56,7 +56,11 @@ You can estimate how much space the [path]``/var/spacewalk/`` directory requires
 
 |
 | [path]``/var/spacewalk``
-| Minimum 50{nbsp}GB per {suse} product and 360{nbsp}GB per Red Hat product
+| Minimum 100{nbsp}GB (the implemented check ensure it)
+
+* 50{nbsp}GB per {suse} product and Package Hub
+
+* 360{nbsp}GB per Red Hat product
 
 |
 | [path]``/var/cache``
@@ -102,7 +106,11 @@ ifeval::[{suma-content} == true]
 
 |
 | [path]``/var/spacewalk``
-| Minimum 50{nbsp}GB per SUSE product and 360{nbsp}GB per Red Hat product
+| Minimum 100{nbsp}GB (the implemented check ensure it)
+
+* 50{nbsp}GB per {suse} product and Package Hub
+
+* 360{nbsp}GB per Red Hat product
 
 |
 | [path]``/var/cache``
