--- a/modules/installation-and-upgrade/pages/hardware-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/hardware-requirements.adoc
@@ -56,7 +56,7 @@ You can estimate how much space the [path]``/var/spacewalk/`` directory requires
 
 |
 | [path]``/var/spacewalk``
-| Minimum 100{nbsp}GB (the implemented check ensure it)
+| Minimum storage required: 100{nbsp}GB (this will be verified by the implemented check)
 
 * 50{nbsp}GB per {suse} product and Package Hub
 
