--- a/modules/installation-and-upgrade/pages/uyuni-install-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/uyuni-install-requirements.adoc
@@ -42,7 +42,7 @@ The following tables specify the minimum server and proxy requirements.
 
 |
 | [path]``/var/spacewalk``
-| Minimum 100{nbsp}GB (the implemented check ensure it)
+| Minimum storage required: 100{nbsp}GB (this will be verified by the implemented check)
 
 * 50{nbsp}GB per {suse} product and Package Hub
 
