--- a/modules/installation-and-upgrade/pages/hardware-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/hardware-requirements.adoc
@@ -106,7 +106,7 @@ ifeval::[{suma-content} == true]
 
 |
 | [path]``/var/spacewalk``
-| Minimum 100{nbsp}GB (the implemented check ensure it)
+| Minimum storage required: 100{nbsp}GB (this will be verified by the implemented check)
 
 * 50{nbsp}GB per {suse} product and Package Hub
 
