--- a/modules/installation-and-upgrade/pages/hardware-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/hardware-requirements.adoc
@@ -58,9 +58,9 @@ You can estimate how much space the [path]``/var/spacewalk/`` directory requires
 | [path]``/var/spacewalk``
 | Minimum storage required: 100{nbsp}GB (this will be verified by the implemented check)
 
-* 50{nbsp}GB per {suse} product and Package Hub
+* 50{nbsp}GB for each {suse} product and Package Hub
 
-* 360{nbsp}GB per Red Hat product
+* 360{nbsp}GB for each Red Hat product
 
 |
 | [path]``/var/cache``
@@ -108,9 +108,9 @@ ifeval::[{suma-content} == true]
 | [path]``/var/spacewalk``
 | Minimum storage required: 100{nbsp}GB (this will be verified by the implemented check)
 
-* 50{nbsp}GB per {suse} product and Package Hub
+* 50{nbsp}GB for each {suse} product and Package Hub
 
-* 360{nbsp}GB per Red Hat product
+* 360{nbsp}GB for each Red Hat product
 
 |
 | [path]``/var/cache``
