--- a/modules/installation-and-upgrade/pages/uyuni-install-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/uyuni-install-requirements.adoc
@@ -44,9 +44,9 @@ The following tables specify the minimum server and proxy requirements.
 | [path]``/var/spacewalk``
 | Minimum storage required: 100{nbsp}GB (this will be verified by the implemented check)
 
-* 50{nbsp}GB per {suse} product and Package Hub
+* 50{nbsp}GB for each {suse} product and Package Hub
 
-* 360{nbsp}GB per Red Hat product
+* 360{nbsp}GB for each Red Hat product
 
 |
 | [path]``/var/cache``
