Add docs about SCC fromDir behavior
Signed-off-by: Miguel Sama <miguel.sama@suse.com>

--- a/modules/administration/pages/disconnected-setup.adoc
+++ b/modules/administration/pages/disconnected-setup.adoc
@@ -188,3 +188,9 @@ The removable disk that you use for synchronization must always be available at 
 Do not trigger a synchronization, if the storage medium is not mounted.
 This results in data corruption.
 ====
+
+[NOTE]
+====
+Be aware that if server.susemanager.fromdir is set, {productname} won't be able to check if SCC credentials are valid or not.
+Instead, a warning sign will be displayed and no SCC online check will be performed.
+====
