cleanup: URL names and adoc tagging https://github.com/uyuni-project/uyuni-docs/issues/2299 https://github.com/uyuni-project/uyuni-docs/issues/2300 https://github.com/SUSE/spacewalk/issues/22460

--- a/modules/administration/pages/actions.adoc
+++ b/modules/administration/pages/actions.adoc
@@ -28,8 +28,8 @@ For more information about configuration channels, see xref:client-configuration
 
 
 .Procedure: Creating a New Recurring Action
-. To apply a recurring action to an individual client, navigate to [guimenu]``Systems``, click the client to configure schedules for, and navigate to the menu:[Recurring Actions] tab.
-. To apply a recurring action to a system group, navigate to menu:Systems[System Groups], select the group to configure schedules for, and navigate to menu:[Recurring Actions] tab.
+. To apply a recurring action to an individual client, navigate to [guimenu]``Systems``, click the client to configure schedules for, and navigate to the [guimenu]``Recurring Actions`` tab.
+. To apply a recurring action to a system group, navigate to menu:Systems[System Groups], select the group to configure schedules for, and navigate to [guimenu]``Recurring Actions`` tab.
 . Click btn:[Create].
 . Select an action type from the [guimenu]``Action Type`` dropdown.
 . Type a name for the new schedule.
