--- a/modules/installation-and-upgrade/pages/client-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/client-requirements.adoc
@@ -16,6 +16,10 @@ link:https://www.suse.com/lifecycle[]
 For non-{suse} operating systems, including {rhel}, {centos}, and {oracle}, only the latest available version is under general support.
 ====
 
+
+// 2023-09-20 OM: Make sure this table and the one in file
+// modules/client-configuration/pages/supported-features.adoc are identical
+
 [[supported-client-systems-snippet]]
 
 ifeval::[{suma-content} == true]
@@ -51,6 +55,10 @@ ifeval::[{suma-content} == true]
 | {x86_64}, {aarch64}
 | {check}
 
+| {sll} 9
+| {x86_64}
+| {check}
+
 | {sles} ES 7
 | {x86_64}
 | {check}
@@ -72,10 +80,6 @@ ifeval::[{suma-content} == true]
 | {check}
 
 | {centos} 7
-| {x86_64}, {aarch64}
-| {check}
-
-| {centos} 8
 | {x86_64}, {aarch64}
 | {check}
 
@@ -130,6 +134,9 @@ ifeval::[{suma-content} == true]
 |===
 endif::[]
 
+
+// 2023-09-20 OM: Make sure this table and the one in file
+// modules/client-configuration/pages/supported-features.adoc are identical
 
 ifeval::[{uyuni-content} == true]
 [[uyuni.supported.clients]]
