--- a/modules/installation-and-upgrade/pages/client-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/client-requirements.adoc
@@ -62,6 +62,11 @@ ifeval::[{suma-content} == true]
 | {check}
 | {check}
 
+| {sll} 9
+| {x86_64}
+| {cross}
+| {check}
+
 | {sles} ES 8
 | {x86_64}
 | {cross}
@@ -72,22 +77,17 @@ ifeval::[{suma-content} == true]
 | {check}
 | {check}
 
-| {almalinux} 8
-| {x86_64}, {aarch64}
-| {cross}
-| {check}
-
 | {almalinux} 9
 | {x86_64}, {aarch64}
 | {cross}
 | {check}
 
-| {amazon} 2
+| {almalinux} 8
 | {x86_64}, {aarch64}
 | {cross}
 | {check}
 
-| {centos} 8
+| {amazon} 2
 | {x86_64}, {aarch64}
 | {cross}
 | {check}
@@ -120,6 +120,11 @@ ifeval::[{suma-content} == true]
 | {oracle} 7
 | {x86_64}, {aarch64}
 | {check}
+| {check}
+
+| {rhel} 9
+| {x86_64}
+| {cross}
 | {check}
 
 | {rhel} 8
