--- a/modules/installation-and-upgrade/pages/server-intro.adoc
+++ b/modules/installation-and-upgrade/pages/server-intro.adoc
@@ -18,7 +18,6 @@ Such a major upgrade usually is an upgrade from X.Y to X+1.0 or to X+1.1, where 
 For example:
 
 * From version 3.2 to 4.0 or to 4.1 (upgrading directly from 3.2 to 4.2 or later is s not supported).
-* From 4.3 to 5.0 or, probably, to 5.1 (upgrading directly from 4.3 to 5.2 or later probably is not supported).
 
 * See xref:installation-and-upgrade:server-x.adoc[].
 
@@ -29,18 +28,15 @@ Such a minor upgrade is an upgrade from X.Y to X.Y+1.
 For example:
 
 * From 4.2 to 4.3.
-* From 5.0 to 5.1.
 
 If you take a closer look, you always upgrade from and to the latest patch level of the minor version.
-For example, from 4.2.12 to 4.3.8 or from 5.0.i to 5.1.j (when available).
+For example, from 4.2.12 to 4.3.8.
 
 * See xref:installation-and-upgrade:server-y.adoc[].
 
 Patch Level Upgrade (Z Upgrade)::
 * Upgrading within the same minor version.
 This is often referred to as a maintenance update or MU.
-For example, upgrading from 4.3.7 to 4.3.8 or from 5.0.0 to 5.0.1 (when available).
+For example, upgrading from 4.3.7 to 4.3.8.
 
 * See xref:installation-and-upgrade:server-z.adoc[].
-
-
