--- a/modules/installation-and-upgrade/pages/hardware-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/hardware-requirements.adoc
@@ -56,7 +56,11 @@ You can estimate how much space the [path]``/var/spacewalk/`` directory requires
 
 |
 | [path]``/var/spacewalk``
-| Minimum 50{nbsp}GB per {suse} product and 360{nbsp}GB per Red Hat product
+| Minimum storage required: 100{nbsp}GB (this will be verified by the implemented check)
+
+* 50{nbsp}GB for each {suse} product and Package Hub
+
+* 360{nbsp}GB for each Red Hat product
 
 |
 | [path]``/var/cache``
@@ -102,7 +106,11 @@ ifeval::[{suma-content} == true]
 
 |
 | [path]``/var/spacewalk``
-| Minimum 50{nbsp}GB per SUSE product and 360{nbsp}GB per Red Hat product
+| Minimum storage required: 100{nbsp}GB (this will be verified by the implemented check)
+
+* 50{nbsp}GB for each {suse} product and Package Hub
+
+* 360{nbsp}GB for each Red Hat product
 
 |
 | [path]``/var/cache``
