--- a/modules/installation-and-upgrade/pages/uyuni-install-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/uyuni-install-requirements.adoc
@@ -42,7 +42,11 @@ The following tables specify the minimum server and proxy requirements.
 
 |
 | [path]``/var/spacewalk``
-| Minimum 50{nbsp}GB per {suse} product and 360{nbsp}GB per Red Hat product
+| Minimum storage required: 100{nbsp}GB (this will be verified by the implemented check)
+
+* 50{nbsp}GB for each {suse} product and Package Hub
+
+* 360{nbsp}GB for each Red Hat product
 
 |
 | [path]``/var/cache``
