from 4.3 branch plus cosmetic drive-by edits

--- a/modules/installation-and-upgrade/pages/hardware-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/hardware-requirements.adoc
@@ -56,16 +56,16 @@ You can estimate how much space the [path]``/var/spacewalk/`` directory requires
 
 |
 | [path]``/var/spacewalk``
-| Minimum 100{nbsp}GB (the implemented check ensure it)
+| Minimum storage required: 100{nbsp}GB (this will be verified by the implemented check)
 
-* 50{nbsp}GB per {suse} product and Package Hub
+* 50{nbsp}GB for each {suse} product and Package Hub
 
-* 360{nbsp}GB per Red Hat product
+* 360{nbsp}GB for each {redhat} product
 
 |
 | [path]``/var/cache``
 | Minimum 10{nbsp}GB.
-Add 100{nbsp}MB per {suse} product, 1{nbsp}GB per Red Hat or other product.
+Add 100{nbsp}MB per {suse} product, 1{nbsp}GB per {redhat} or other product.
 Double the space if the server is an ISS Master.
 
 |
@@ -106,16 +106,16 @@ ifeval::[{suma-content} == true]
 
 |
 | [path]``/var/spacewalk``
-| Minimum 100{nbsp}GB (the implemented check ensure it)
+| Minimum storage required: 100{nbsp}GB (this will be verified by the implemented check)
 
-* 50{nbsp}GB per {suse} product and Package Hub
+* 50{nbsp}GB for each {suse} product and Package Hub
 
-* 360{nbsp}GB per Red Hat product
+* 360{nbsp}GB for each {redhat} product
 
 |
 | [path]``/var/cache``
 | Minimum 10{nbsp}GB.
-Add 100{nbsp}MB per {suse} product, 1{nbsp}GB per Red Hat or other product.
+Add 100{nbsp}MB per {suse} product, 1{nbsp}GB per {redhat} or other product.
 Double the space if the server is an ISS Master.
 
 |
@@ -125,7 +125,6 @@ Double the space if the server is an ISS Master.
 |===
 
 endif::[]
-
 
 [IMPORTANT]
 ====
