cleanup: URL names and adoc tagging (#2470)
https://github.com/uyuni-project/uyuni-docs/issues/2299
https://github.com/uyuni-project/uyuni-docs/issues/2300
https://github.com/SUSE/spacewalk/issues/22460

--- a/modules/administration/pages/image-management.adoc
+++ b/modules/administration/pages/image-management.adoc
@@ -20,7 +20,8 @@ The image store for the Kiwi build type is pre-defined as a file system director
 {productname} serves the image store over HTTPS from [literal]``//<SERVER-FQDN>/os-images/``.
 The image store location is unique and is not customizable.
 
-Images are always stored in [path]``/srv/www/os-image/<organization id>``.
+Images are stored in [path]``/srv/www/os-image/<organization-id>``.
+
 
 
 [[at.images.docker]]
@@ -384,7 +385,7 @@ Kiwi image configuration files and configuration scripts must be accessible in o
 * HTTP hosted tarball
 * Local build host directory
 
-For an example of a complete Kiwi repository served by git, see https://github.com/SUSE/manager-build-profiles/tree/master/OSImage
+For an example of a complete Kiwi repository served by git, see https://github.com/SUSE/manager-build-profiles/tree/master/OSImage.
 
 [NOTE]
 ====
@@ -521,11 +522,11 @@ By default, the image store is located at [path]``/srv/www/os-images``.
 Image stores for Kiwi build type, used to build system, virtual, and other images, are not supported yet.
 
 ifeval::[{suma-content} == true]
-Images are always stored in [path]``/srv/www/os-images/<organization id>`` and are accessible via HTTP/HTTPS [url]``https://<susemanager_host>/os-images/<organization id>``.	Images are always stored in [path]``/srv/www/os-images/<organization id>`` and are accessible via HTTP/HTTPS [url]``https://<susemanager_host>/os-images/<organization id>``.
+Images are always stored in [path]``/srv/www/os-images/<organization-id>`` and are accessible via HTTP/HTTPS [url]``https://<susemanager_host>/os-images/<organization-id>``.
 endif::[]
 
 ifeval::[{uyuni-content} == true]
-Images are always stored in [path]``/srv/www/os-images/<organization id>`` and are accessible via HTTP/HTTPS [url]``https://<uyuni_host>/os-images/<organization id>``.
+Images are always stored in [path]``/srv/www/os-images/<organization-id>`` and are accessible via HTTP/HTTPS [url]``https://<uyuni_host>/os-images/<organization-id>``.
 endif::[]
 ====
 
