testing table alternative

--- a/modules/administration/pages/openscap.adoc
+++ b/modules/administration/pages/openscap.adoc
@@ -189,7 +189,7 @@ You can also use the {productname} API to schedule regular scans.
 If you use [literal]``--fetch-remote-resources`` parameter a lot of RAM is required.
 In addition, you may need to increase the value of [literal]``file_recv_max_size``.
 ====
-+
+
 . The scan runs at the client's next scheduled synchronization.
 
 
@@ -257,7 +257,8 @@ You can also use the {productname} API to view results, with the ``system.scap`
 [[remediation]]
 == Remediation
 
-Remediation bash scripts and Ansible playbooks are provided in the same SCAP Security Guide packages to harden the client systems. For example:
+Remediation Bash scripts and Ansible playbooks are provided in the same SCAP Security Guide packages to harden the client systems.
+For example:
 
 .bash scripts
 ----
@@ -331,6 +332,27 @@ chmod +x -R /usr/share/scap-security-guide/bash
 ==== {sle} {opensuse} and variants
 
 Example {sle} and {opensuse} script data.
+
+Package::
+scap-security-guide
+
+Channels::
+* SLE12: SLES12 Updates
+* SLE15: SLES15 Module Basesystem Updates
+
+Bash script directory::
+`/usr/share/scap-security-guide/bash/`
+
+Bash scripts::
+----
+opensuse-script-standard.sh
+sle12-script-standard.sh
+sle12-script-stig.sh
+sle15-script-cis.sh
+sle15-script-standard.sh
+sle15-script-stig.sh
+----
+
 
 .{sle} {opensuse}
 [col="1h,4*"]
