--- a/modules/administration/pages/openscap.adoc
+++ b/modules/administration/pages/openscap.adoc
@@ -461,20 +461,18 @@ sl7-script-standard.sh
 
 Example {ubuntu} script data.
 
-.{ubuntu}
-[col="1h,4*"]
-|===
-
-|Package |
+Package::
 scap-security-guide-ubuntu
 
-| Channel |
-SUSE Manager Tools
+Channels::
+* SUSE Manager Tools
 
-| Bash Script Folder |
+Bash script directory::
 `/usr/share/scap-security-guide/`
 
-| Bash Script |
+Bash scripts::
++
+----
 ubuntu1804-script-anssi_np_nt28_average.sh
 ubuntu1804-script-anssi_np_nt28_high.sh
 ubuntu1804-script-anssi_np_nt28_minimal.sh
@@ -482,26 +480,25 @@ ubuntu1804-script-anssi_np_nt28_restrictive.sh
 ubuntu1804-script-cis.sh
 ubuntu1804-script-standard.sh
 ubuntu2004-script-standard.sh
-|===
+----
 
 
 ==== {debian} Bash script data
 
 Example {debian} script data.
 
-.{debian}
-[col="1h,4*"]
-|===
-| Package |
+Package::
 scap-security-guide-debian
 
-| Channel |
-SUSE Manager Tools
+Channels::
+* SUSE Manager Tools
 
-| Bash Script Folder |
-`/usr/share/scap-security-guide/bash`
+Bash script directory::
+`/usr/share/scap-security-guide/bash/`
 
-| Bash Scripts |
+Bash scripts::
++
+----
 debian10-script-anssi_np_nt28_average.sh
 debian10-script-anssi_np_nt28_high.sh
 debian10-script-anssi_np_nt28_minimal.sh
@@ -512,4 +509,4 @@ debian11-script-anssi_np_nt28_high.sh
 debian11-script-anssi_np_nt28_minimal.sh
 debian11-script-anssi_np_nt28_restrictive.sh
 debian11-script-standard.sh
-|===
+----
