--- a/modules/client-configuration/nav-client-configuration-guide.adoc
+++ b/modules/client-configuration/nav-client-configuration-guide.adoc
@@ -48,6 +48,7 @@ endif::[]
 **** xref:contact-methods-rhnsd.adoc[rhnsd]
 ***** xref:contact-methods-osad.adoc[OSAD]
 **** xref:contact-methods-pushssh.adoc[Push via SSH]
+*** xref:contact-methods-migrate-traditional.adoc[Migrate Traditional Clients]
 ** xref:registration-overview.adoc[Client Registration]
 *** xref:registration-methods.adoc[Registration Methods]
 **** xref:registration-webui.adoc[Register with the Web UI]
