--- a/modules/administration/pages/openscap.adoc
+++ b/modules/administration/pages/openscap.adoc
@@ -189,7 +189,7 @@ You can also use the {productname} API to schedule regular scans.
 If you use [literal]``--fetch-remote-resources`` parameter a lot of RAM is required.
 In addition, you may need to increase the value of [literal]``file_recv_max_size``.
 ====
-+
+
 . The scan runs at the client's next scheduled synchronization.
 
 
@@ -257,7 +257,8 @@ You can also use the {productname} API to view results, with the ``system.scap`
 [[remediation]]
 == Remediation
 
-Remediation bash scripts and Ansible playbooks are provided in the same SCAP Security Guide packages to harden the client systems. For example:
+Remediation Bash scripts and Ansible playbooks are provided in the same SCAP Security Guide packages to harden the client systems.
+For example:
 
 .bash scripts
 ----
@@ -332,22 +333,27 @@ chmod +x -R /usr/share/scap-security-guide/bash
 
 Example {sle} and {opensuse} script data.
 
-.{sle} {opensuse}
-[col="1h,4*"]
-|===
+Package::
+scap-security-guide
 
-| Package | scap-security-guide
-| Channels | SLE12: SLES12 Updates +
-             SLE15: SLES15 Module Basesystem Updates
-| Bash script folder | `/usr/share/scap-security-guide/bash/`
-| Bash scripts |
-opensuse-script-standard.sh +
-sle12-script-standard.sh +
-sle12-script-stig.sh +
-sle15-script-cis.sh +
-sle15-script-standard.sh +
+Channels::
+* SLE12: SLES12 Updates
+* SLE15: SLES15 Module Basesystem Updates
+
+Bash script directory::
+`/usr/share/scap-security-guide/bash/`
+
+Bash scripts::
++
+----
+opensuse-script-standard.sh
+sle12-script-standard.sh
+sle12-script-stig.sh
+sle15-script-cis.sh
+sle15-script-standard.sh
 sle15-script-stig.sh
-|===
+----
+
 
 
 ==== {rhel} and {centos} Bash script data
@@ -359,158 +365,151 @@ Example {rhel} and {centos} script data.
 [package]``scap-security-guide`` in centos7-updates only contains the {rhel} script.
 ====
 
-.{rhel} {centos} and variants
-[col="1h,4*"]
-|===
-
-| Package |
+Package::
 scap-security-guide-redhat
 
-| Channel |
-SUSE Manager Tools +
+Channels::
+* SUSE Manager Tools
 
-| Bash script folder |
+Bash script directory::
 `/usr/share/scap-security-guide/bash/`
 
-| Bash scripts |
-centos7-script-pci-dss.sh +
-centos7-script-standard.sh +
-centos8-script-pci-dss.sh +
-centos8-script-standard.sh +
-fedora-script-ospp.sh +
-fedora-script-pci-dss.sh +
-fedora-script-standard.sh +
-ol7-script-anssi_nt28_enhanced.sh +
-ol7-script-anssi_nt28_high.sh +
-ol7-script-anssi_nt28_intermediary.sh +
-ol7-script-anssi_nt28_minimal.sh +
-ol7-script-cjis.sh +
-ol7-script-cui.sh +
-ol7-script-e8.sh +
-ol7-script-hipaa.sh +
-ol7-script-ospp.sh +
-ol7-script-pci-dss.sh +
-ol7-script-sap.sh +
-ol7-script-standard.sh +
-ol7-script-stig.sh +
-ol8-script-anssi_bp28_enhanced.sh +
-ol8-script-anssi_bp28_high.sh +
-ol8-script-anssi_bp28_intermediary.sh +
-ol8-script-anssi_bp28_minimal.sh +
-ol8-script-cjis.sh +
-ol8-script-cui.sh +
-ol8-script-e8.sh +
-ol8-script-hipaa.sh +
-ol8-script-ospp.sh +
-ol8-script-pci-dss.sh +
-ol8-script-standard.sh +
-rhel7-script-anssi_nt28_enhanced.sh +
-rhel7-script-anssi_nt28_high.sh +
-rhel7-script-anssi_nt28_intermediary.sh +
-rhel7-script-anssi_nt28_minimal.sh +
-rhel7-script-C2S.sh +
-rhel7-script-cis.sh +
-rhel7-script-cjis.sh +
-rhel7-script-cui.sh +
-rhel7-script-e8.sh +
-rhel7-script-hipaa.sh +
-rhel7-script-ncp.sh +
-rhel7-script-ospp.sh +
-rhel7-script-pci-dss.sh +
-rhel7-script-rhelh-stig.sh +
-rhel7-script-rhelh-vpp.sh +
-rhel7-script-rht-ccp.sh +
-rhel7-script-standard.sh +
-rhel7-script-stig_gui.sh +
-rhel7-script-stig.sh +
-rhel8-script-anssi_bp28_enhanced.sh +
-rhel8-script-anssi_bp28_high.sh +
-rhel8-script-anssi_bp28_intermediary.sh +
-rhel8-script-anssi_bp28_minimal.sh +
-rhel8-script-cis.sh +
-rhel8-script-cjis.sh +
-rhel8-script-cui.sh +
-rhel8-script-e8.sh +
-rhel8-script-hipaa.sh +
-rhel8-script-ism_o.sh +
-rhel8-script-ospp.sh +
-rhel8-script-pci-dss.sh +
-rhel8-script-rhelh-stig.sh +
-rhel8-script-rhelh-vpp.sh +
-rhel8-script-rht-ccp.sh +
-rhel8-script-standard.sh +
-rhel8-script-stig_gui.sh +
-rhel8-script-stig.sh +
-rhel9-script-pci-dss.sh +
-rhosp10-script-cui.sh +
-rhosp10-script-stig.sh +
-rhosp13-script-stig.sh +
-rhv4-script-pci-dss.sh +
-rhv4-script-rhvh-stig.sh +
-rhv4-script-rhvh-vpp.sh +
-sl7-script-pci-dss.sh +
-sl7-script-standard.sh +
-|===
+Bash scripts::
++
+----
+centos7-script-pci-dss.sh
+centos7-script-standard.sh
+centos8-script-pci-dss.sh
+centos8-script-standard.sh
+fedora-script-ospp.sh
+fedora-script-pci-dss.sh
+fedora-script-standard.sh
+ol7-script-anssi_nt28_enhanced.sh
+ol7-script-anssi_nt28_high.sh
+ol7-script-anssi_nt28_intermediary.sh
+ol7-script-anssi_nt28_minimal.sh
+ol7-script-cjis.sh
+ol7-script-cui.sh
+ol7-script-e8.sh
+ol7-script-hipaa.sh
+ol7-script-ospp.sh
+ol7-script-pci-dss.sh
+ol7-script-sap.sh
+ol7-script-standard.sh
+ol7-script-stig.sh
+ol8-script-anssi_bp28_enhanced.sh
+ol8-script-anssi_bp28_high.sh
+ol8-script-anssi_bp28_intermediary.sh
+ol8-script-anssi_bp28_minimal.sh
+ol8-script-cjis.sh
+ol8-script-cui.sh
+ol8-script-e8.sh
+ol8-script-hipaa.sh
+ol8-script-ospp.sh
+ol8-script-pci-dss.sh
+ol8-script-standard.sh
+rhel7-script-anssi_nt28_enhanced.sh
+rhel7-script-anssi_nt28_high.sh
+rhel7-script-anssi_nt28_intermediary.sh
+rhel7-script-anssi_nt28_minimal.sh
+rhel7-script-C2S.sh
+rhel7-script-cis.sh
+rhel7-script-cjis.sh
+rhel7-script-cui.sh
+rhel7-script-e8.sh
+rhel7-script-hipaa.sh
+rhel7-script-ncp.sh
+rhel7-script-ospp.sh
+rhel7-script-pci-dss.sh
+rhel7-script-rhelh-stig.sh
+rhel7-script-rhelh-vpp.sh
+rhel7-script-rht-ccp.sh
+rhel7-script-standard.sh
+rhel7-script-stig_gui.sh
+rhel7-script-stig.sh
+rhel8-script-anssi_bp28_enhanced.sh
+rhel8-script-anssi_bp28_high.sh
+rhel8-script-anssi_bp28_intermediary.sh
+rhel8-script-anssi_bp28_minimal.sh
+rhel8-script-cis.sh
+rhel8-script-cjis.sh
+rhel8-script-cui.sh
+rhel8-script-e8.sh
+rhel8-script-hipaa.sh
+rhel8-script-ism_o.sh
+rhel8-script-ospp.sh
+rhel8-script-pci-dss.sh
+rhel8-script-rhelh-stig.sh
+rhel8-script-rhelh-vpp.sh
+rhel8-script-rht-ccp.sh
+rhel8-script-standard.sh
+rhel8-script-stig_gui.sh
+rhel8-script-stig.sh
+rhel9-script-pci-dss.sh
+rhosp10-script-cui.sh
+rhosp10-script-stig.sh
+rhosp13-script-stig.sh
+rhv4-script-pci-dss.sh
+rhv4-script-rhvh-stig.sh
+rhv4-script-rhvh-vpp.sh
+sl7-script-pci-dss.sh
+sl7-script-standard.sh
+----
 
 
 ==== {ubuntu} Bash script data
 
 Example {ubuntu} script data.
 
-.{ubuntu}
-[col="1h,4*"]
-|===
-
-|Package |
+Package::
 scap-security-guide-ubuntu
 
-| Channel |
-SUSE Manager Tools
+Channels::
+* SUSE Manager Tools
 
-| Bash Script Folder |
+Bash script directory::
 `/usr/share/scap-security-guide/`
 
-| Bash Script |
-ubuntu1804-script-anssi_np_nt28_average.sh +
-ubuntu1804-script-anssi_np_nt28_high.sh +
-ubuntu1804-script-anssi_np_nt28_minimal.sh +
-ubuntu1804-script-anssi_np_nt28_restrictive.sh +
-ubuntu1804-script-cis.sh +
-ubuntu1804-script-standard.sh +
-ubuntu2004-script-standard.sh +
-|===
+Bash scripts::
++
+----
+ubuntu1804-script-anssi_np_nt28_average.sh
+ubuntu1804-script-anssi_np_nt28_high.sh
+ubuntu1804-script-anssi_np_nt28_minimal.sh
+ubuntu1804-script-anssi_np_nt28_restrictive.sh
+ubuntu1804-script-cis.sh
+ubuntu1804-script-standard.sh
+ubuntu2004-script-standard.sh
+----
 
 
 ==== {debian} Bash script data
 
 Example {debian} script data.
 
-.{debian}
-[col="1h,4*"]
-|===
-| Package |
+Package::
 scap-security-guide-debian
 
-| Channel |
-SUSE Manager Tools
+Channels::
+* SUSE Manager Tools
 
-| Bash Script Folder |
-`/usr/share/scap-security-guide/bash`
+Bash script directory::
+`/usr/share/scap-security-guide/bash/`
 
-| Bash Scripts |
-debian10-script-anssi_np_nt28_average.sh +
-debian10-script-anssi_np_nt28_high.sh +
-debian10-script-anssi_np_nt28_minimal.sh +
-debian10-script-anssi_np_nt28_restrictive.sh +
-debian10-script-standard.sh +
-debian11-script-anssi_np_nt28_average.sh +
-debian11-script-anssi_np_nt28_high.sh +
-debian11-script-anssi_np_nt28_minimal.sh +
-debian11-script-anssi_np_nt28_restrictive.sh +
-debian11-script-standard.sh +
-|===
-
-
+Bash scripts::
++
+----
+debian10-script-anssi_np_nt28_average.sh
+debian10-script-anssi_np_nt28_high.sh
+debian10-script-anssi_np_nt28_minimal.sh
+debian10-script-anssi_np_nt28_restrictive.sh
+debian10-script-standard.sh
+debian11-script-anssi_np_nt28_average.sh
+debian11-script-anssi_np_nt28_high.sh
+debian11-script-anssi_np_nt28_minimal.sh
+debian11-script-anssi_np_nt28_restrictive.sh
+debian11-script-standard.sh
+----
 
 ////
 Old content that has come across from the Reference Guide starts here. Pretty much all of this now exists in the right locations, but I'm leaving it here for posterity on the chance that there is yelling. --LKB 2020-08-05
