Iau server upgrade #1214471 keichwa (#2441)
* incomplete rename; new name: upgrade-intro.adoc
* use examples according to
  https://bugzilla.suse.com/show_bug.cgi?id=1214471

--- a/modules/installation-and-upgrade/pages/server-x.adoc
+++ b/modules/installation-and-upgrade/pages/server-x.adoc
@@ -1,7 +1,8 @@
 [[server-x]]
 = Server - Major Version Upgrade (X Upgrade)
 
-This type of upgrade does not apply for 4.3.
-For older documentation and instructions on major version upgrade, see:
+This type of upgrade applies for an upgrade from 3.2 to 4.0.
 
-link:https://documentation.suse.com/external-tree/en-us/suma/4.1/suse-manager/upgrade/server-x.html[]
+////
+For older documentation and instructions on major version upgrade, see https://documentation.suse.com/external-tree/en-us/suma/4.1/suse-manager/upgrade/server-x.html.
+////
